--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>API DIY</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" charset="utf-8"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="main.js" charset="utf-8"></script>
 </head>
 <body>
@@ -11,7 +14,7 @@
   <h1>TITLE</h1>
 
   <input type="number" id="num" placeholder="Number">
-  <button id="getSquare"></button>
+  <button id="getSquare">Square</button>
 
 </body>
 </html>
