cube is working :+1:

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,11 @@
 
   <input type="number" id="num" placeholder="Number">
   <button id="getSquare">Square</button>
+  <button id="getCube">Cube</button>
+  <button id="getProduct">Product</button>
+  <button id="getQuotient">Quotient</button>
+  <button id="getDiff">Diff</button>
+  <button id="getSum">Sum</button>
 
 </body>
 </html>
