--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,23 @@
   <input type="number" id="num" placeholder="Number">
   <button id="getSquare">Square</button>
   <button id="getCube">Cube</button>
+  <div></div>
+
+  <input type="number" id="multiplicand" placeholder="Number">
+  <input type="number" id="multiplier" placeholder="Number">
   <button id="getProduct">Product</button>
+
+  <input type="number" id="divisor" placeholder="Number">
+  <input type="number" id="dividend" placeholder="Number">
   <button id="getQuotient">Quotient</button>
-  <button id="getDiff">Diff</button>
+
+  <input type="number" id="addendOne" placeholder="Number">
+  <input type="number" id="addendTwo" placeholder="Number">
   <button id="getSum">Sum</button>
+
+  <input type="number" id="minuend" placeholder="Number">
+  <input type="number" id="subtrahend" placeholder="Number">
+  <button id="getDiff">Diff</button>
 
 </body>
 </html>
