--- a/public/index.html
+++ b/public/index.html
@@ -1,38 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>API DIY</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" charset="utf-8"></script>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <script src="main.js" charset="utf-8"></script>
+    <meta charset="UTF-8">
+    <title>API DIY</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script src="main.js" charset="utf-8"></script>
 </head>
+
 <body>
 
-  <h1>TITLE</h1>
+    <h1>TITLE</h1>
 
-  <input type="number" id="num" placeholder="Number">
-  <button id="getSquare">Square</button>
-  <button id="getCube">Cube</button>
-  <div></div>
+    <input type="number" id="num" placeholder="Number">
+    <button id="getSquare">Square</button>
+    <button id="getCube">Cube</button>
+    <div id = "squareResult"></div>
+    <div id = "cubeResult"></div>
 
-  <input type="number" id="multiplicand" placeholder="Number">
-  <input type="number" id="multiplier" placeholder="Number">
-  <button id="getProduct">Product</button>
+    <input type="number" id="multiplicand" placeholder="Number">
+    <input type="number" id="multiplier" placeholder="Number">
+    <button id="getProduct">Product</button>
+    <div id = "productResult"></div>
 
-  <input type="number" id="divisor" placeholder="Number">
-  <input type="number" id="dividend" placeholder="Number">
-  <button id="getQuotient">Quotient</button>
+    <input type="number" id="divisor" placeholder="Number">
+    <input type="number" id="dividend" placeholder="Number">
+    <button id="getQuotient">Quotient</button>
+    <div id = "quotientResult"></div>
 
-  <input type="number" id="addendOne" placeholder="Number">
-  <input type="number" id="addendTwo" placeholder="Number">
-  <button id="getSum">Sum</button>
+    <input type="number" id="addendOne" placeholder="Number">
+    <input type="number" id="addendTwo" placeholder="Number">
+    <button id="getSum">Sum</button>
+    <div id = "sumResult"></div>
 
-  <input type="number" id="minuend" placeholder="Number">
-  <input type="number" id="subtrahend" placeholder="Number">
-  <button id="getDiff">Diff</button>
+    <input type="number" id="minuend" placeholder="Number">
+    <input type="number" id="subtrahend" placeholder="Number">
+    <button id="getDiff">Diff</button>
+    <div id = "diffResult"></div>
+
+    <input type="text" id="gravatarThing" placeholder="Your Email">
+    <button id="getGravatar">Gravatar</button>
 
 </body>
+
 </html>
