--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,15 @@
 
     <input type="text" id="gravatarThing" placeholder="Your Email">
     <button id="getGravatar">Gravatar</button>
+    <img src="" alt="" id="image">
+    <h2 id="resUrl"></h2>
+
+    <input type="paragraph" id="countWords" placeholder="Paste words here...">
+    <button id="countWords">Word Count</button>
+    <img src="" alt="" id="image">
+    <h2 id="resUrl"></h2>
+
+
 
 </body>
 
