last push of the night

--- a/public/index.html
+++ b/public/index.html
@@ -41,13 +41,20 @@
     <button id="getDiff">Diff</button>
     <div id = "diffResult"></div>
 
+
+
+    <div class="form-group">
+      <label for="comment">Word Count:</label>
+      <textarea class="form-control" rows="5" id="count"></textarea>
+    </div>
+    <button id="getWordCount">Char Count</button>
+    <div id = "countResult"></div>
+
+
     <input type="text" id="gravatarThing" placeholder="Your Email">
     <button id="getGravatar">Gravatar</button>
-    <img src="" alt="" id="image">
-    <h2 id="resUrl"></h2>
 
-    <input type="paragraph" id="countWords" placeholder="Paste words here...">
-    <button id="countWords">Word Count</button>
+
     <img src="" alt="" id="image">
     <h2 id="resUrl"></h2>
 
